; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_dsa.c_GL_BindMultiTexture.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_dsa.c_GL_BindMultiTexture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64* }

@GL_TEXTURE0 = common dso_local global i64 0, align 8
@glDsaState = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@GL_TEXTURE_CUBE_MAP_POSITIVE_X = common dso_local global i64 0, align 8
@GL_TEXTURE_CUBE_MAP_NEGATIVE_Z = common dso_local global i64 0, align 8
@GL_TEXTURE_CUBE_MAP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GL_BindMultiTexture(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @GL_TEXTURE0, align 8
  %11 = sub nsw i64 %9, %10
  store i64 %11, i64* %8, align 8
  %12 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @glDsaState, i32 0, i32 0), align 8
  %13 = load i64, i64* %8, align 8
  %14 = getelementptr inbounds i64, i64* %12, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* %7, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %38

19:                                               ; preds = %3
  %20 = load i64, i64* %6, align 8
  %21 = load i64, i64* @GL_TEXTURE_CUBE_MAP_POSITIVE_X, align 8
  %22 = icmp sge i64 %20, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %19
  %24 = load i64, i64* %6, align 8
  %25 = load i64, i64* @GL_TEXTURE_CUBE_MAP_NEGATIVE_Z, align 8
  %26 = icmp sle i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %23
  %28 = load i64, i64* @GL_TEXTURE_CUBE_MAP, align 8
  store i64 %28, i64* %6, align 8
  br label %29

29:                                               ; preds = %27, %23, %19
  %30 = load i64, i64* %5, align 8
  %31 = load i64, i64* %6, align 8
  %32 = load i64, i64* %7, align 8
  %33 = call i32 @qglBindMultiTextureEXT(i64 %30, i64 %31, i64 %32)
  %34 = load i64, i64* %7, align 8
  %35 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @glDsaState, i32 0, i32 0), align 8
  %36 = load i64, i64* %8, align 8
  %37 = getelementptr inbounds i64, i64* %35, i64 %36
  store i64 %34, i64* %37, align 8
  store i32 1, i32* %4, align 4
  br label %38

38:                                               ; preds = %29, %18
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @qglBindMultiTextureEXT(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
